--- a/app/src/main/res/layout/fragment_confirm_phrase.xml
+++ b/app/src/main/res/layout/fragment_confirm_phrase.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingHorizontal="@dimen/layout_padding_Horizontal"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@mipmap/test_background"
         tools:context=".screens.authenticationScreen.ConfirmPhraseFragment">
@@ -35,7 +36,6 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
             card_view:cardElevation="4dp"
             card_view:cardCornerRadius="10dp"
             card_view:layout_constraintTop_toTopOf="parent"
@@ -80,122 +80,15 @@
                     android:id="@+id/frameLayout">
             </FrameLayout>
 
-            <TableLayout
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/layout_list_phrase_confirm"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="70dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    card_view:layout_constraintTop_toBottomOf="@+id/frameLayout">
-
-                <TableRow
-                        android:layout_marginBottom="@dimen/table_row_margin_bottom_confirm"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                </TableRow>
-
-                <TableRow
-                        android:layout_marginBottom="@dimen/table_row_margin_bottom_confirm"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                </TableRow>
-
-                <TableRow
-                        android:layout_marginBottom="@dimen/table_row_margin_bottom_confirm"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                            android:textAlignment="center"
-                            android:text="creek"
-                            android:layout_weight="1"
-                            android:textColor="@color/colorWhite"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                </TableRow>
-            </TableLayout>
+                    card_view:layout_constraintTop_toBottomOf="@+id/frameLayout"/>
 
         </android.support.constraint.ConstraintLayout>
 
