--- a/app/src/main/res/layout/fragment_create_phrase.xml
+++ b/app/src/main/res/layout/fragment_create_phrase.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/test_background"
+        android:paddingHorizontal="@dimen/layout_padding_Horizontal"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".screens.authenticationScreen.CreatePhraseFragment">
 
@@ -18,9 +19,8 @@
             android:textColor="@color/colorWhite"
             android:background="@drawable/main_button"
             android:textSize="@dimen/button_text_size"
-            android:id="@+id/btnNewWalletAuthen"
+            android:id="@+id/btnNextCreatePhrase"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="40dp"
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView"/>
 
@@ -34,7 +34,6 @@
             android:background="@drawable/main_button"
             android:textSize="@dimen/button_text_size"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="40dp"
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView"/>
 
@@ -43,7 +42,6 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
             card_view:cardElevation="4dp"
             card_view:cardCornerRadius="10dp"
             card_view:layout_constraintTop_toTopOf="parent"
@@ -84,277 +82,16 @@
                     android:id="@+id/frameLayout">
             </FrameLayout>
 
-            <TableLayout
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/layout_list_phrase"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="30dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    card_view:layout_constraintTop_toBottomOf="@+id/frameLayout">
+                    card_view:layout_constraintTop_toBottomOf="@+id/frameLayout"/>
 
-                <TableRow
-                        android:layout_marginBottom="@dimen/table_row_margin_bottom"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="1"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="2"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="3"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="4"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </TableRow>
-
-                <TableRow
-                        android:layout_marginBottom="@dimen/table_row_margin_bottom"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="5"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="6"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="7"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="8"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                </TableRow>
-
-                <TableRow
-                        android:layout_marginBottom="@dimen/table_row_margin_bottom"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="9"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="10"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="11"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                            android:layout_marginRight="@dimen/word_margin_right"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        <TextView
-                                android:textAlignment="center"
-                                android:text="creek"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                        <TextView
-                                android:layout_marginTop="5dp"
-                                android:textAlignment="center"
-                                android:text="12"
-                                android:textColor="@color/colorWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </TableRow>
-            </TableLayout>
 
         </android.support.constraint.ConstraintLayout>
 
