--- a/app/src/main/res/layout/fragment_confirm_phrase.xml
+++ b/app/src/main/res/layout/fragment_confirm_phrase.xml
@@ -27,8 +27,8 @@
             android:id="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/cardView"/>
+            android:layout_marginTop="@dimen/logo_margin_top"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
     <android.support.v7.widget.CardView
@@ -66,7 +66,7 @@
                     android:textAlignment="center"
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold"
-                    android:textSize="18dp"
+                    android:textSize="@dimen/text_title_size"
                     android:layout_marginTop="20dp"
                     card_view:layout_constraintTop_toTopOf="parent"/>
             <FrameLayout
@@ -84,7 +84,7 @@
                     android:id="@+id/layout_list_phrase_confirm"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="70dp"
+                    android:layout_marginTop="50dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
