--- a/app/src/main/res/layout/fragment_create_phrase.xml
+++ b/app/src/main/res/layout/fragment_create_phrase.xml
@@ -69,7 +69,7 @@
                     android:textAlignment="center"
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold"
-                    android:textSize="18dp"
+                    android:textSize="@dimen/text_title_size"
                     android:layout_marginTop="20dp"
                     card_view:layout_constraintTop_toTopOf="parent"/>
             <FrameLayout
@@ -115,7 +115,7 @@
             android:id="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/cardView"/>
+            android:layout_marginTop="@dimen/logo_margin_top"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
