--- a/app/src/main/res/layout/item_confirm_phrase_layout.xml
+++ b/app/src/main/res/layout/item_confirm_phrase_layout.xml
@@ -6,12 +6,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/table_row_margin_bottom_confirm"
-        android:background="@android:color/transparent">
+        android:background="#000">
 
     <TextView
             android:id="@+id/txtPassPhraseConfirm"
             android:textAlignment="center"
             android:text="creek"
+            android:textSize="13dp"
             android:textColor="@color/colorWhite"
             android:paddingHorizontal="5dp"
             android:paddingVertical="15dp"
