--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
 
     <dimen name="logo_splash_width">238dp</dimen>
     <dimen name="logo_splash_heigh">98dp</dimen>
-    <dimen name="logo_margin_top">80dp</dimen>
+    <dimen name="logo_margin_top">10dp</dimen>
 
     <dimen name="layout_padding_Horizontal">30dp</dimen>
 
@@ -29,6 +29,7 @@
 
     //Create New Screen
     <dimen name="text_size">15dp</dimen>
+    <dimen name="text_title_size">17dp</dimen>
     <dimen name="create_new_button_margin_bottom">60dp</dimen>
     <dimen name="cardView_margin_bottom">13dp</dimen>
 
@@ -46,5 +47,8 @@
 
     //Print Phrase Screen
     <dimen name="qr_code_size_print">130dp</dimen>
+
+    //Main Screen
+    <dimen name="qr_code_size_main">160dp</dimen>
 
 </resources>
