--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,18 +95,39 @@
                         android:textStyle="bold"
                         android:textSize="@dimen/text_title_size"
                         card_view:layout_constraintTop_toTopOf="parent"/>
-                <TextView
-                        android:text="address"
-                        android:layout_width="wrap_content"
+
+                <LinearLayout
+                        android:id="@+id/linearLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tvAddressMain"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="15dp"
-                        android:ellipsize="end"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        card_view:layout_constraintEnd_toEndOf="parent"
+                        card_view:layout_constraintStart_toStartOf="parent"
                         android:layout_marginTop="8dp"
-                        card_view:layout_constraintTop_toBottomOf="@+id/textView6"/>
+                        card_view:layout_constraintTop_toBottomOf="@+id/textView6">
+
+                    <TextView
+                            android:text="address"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tvAddressMain"
+                            android:textColor="@color/colorWhite"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:textSize="15dp"
+                            android:ellipsize="middle"
+                            android:layout_marginEnd="8dp"/>
+
+                    <ImageButton
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/ic_copy"
+                            android:scaleType="fitCenter"
+                            android:background="@android:color/transparent"
+                            android:id="@+id/ibtnCopyMain"/>
+
+                </LinearLayout>
 
                 <ImageView
                         android:layout_width="@dimen/qr_code_size_main"
@@ -117,7 +138,7 @@
                         android:layout_marginTop="40dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvAddressMain"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                         app:layout_constraintBottom_toBottomOf="parent"/>
 
             </android.support.constraint.ConstraintLayout>
@@ -125,13 +146,14 @@
         </android.support.v7.widget.CardView>
         <Button
                 android:text="Check"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:id="@+id/btnScanMain"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/circle_button"
                 android:textColor="@color/colorWhite"
                 android:textAllCaps="false"
+                android:elevation="100dp"
                 android:textSize="@dimen/button_text_size"
                 app:layout_constraintTop_toBottomOf="@+id/cardView"
                 app:layout_constraintEnd_toEndOf="parent"
