--- a/app/src/main/res/layout/activity_sneaker_info.xml
+++ b/app/src/main/res/layout/activity_sneaker_info.xml
@@ -4,7 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="@dimen/layout_padding_Horizontal"
         android:background="@mipmap/test_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".screens.activity.SneakerInfoActivity">
@@ -21,13 +20,16 @@
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
             android:layout_below="@+id/imageView3"
             android:layout_above="@+id/textView3"
             android:layout_marginBottom="@dimen/copyright_margin_bottom">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
 
             <ImageView
                     android:layout_width="@dimen/qr_code_size_main"
@@ -40,7 +42,42 @@
                     android:layout_marginTop="30dp"
                     app:layout_constraintTop_toTopOf="parent"/>
 
-        </android.support.constraint.ConstraintLayout>
+            <android.support.constraint.ConstraintLayout
+                    android:id="@+id/layoutItemInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="@dimen/layout_padding_Horizontal"
+                    android:visibility="gone">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:text="Item is validated"
+                    android:textColor="@android:color/white"
+                    android:textSize="20dp"/>
+
+
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.v4.view.ViewPager
+                    android:id="@+id/viewPagerValidateProgress"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:layout_marginVertical="20dp"
+                    android:gravity="center"
+                    android:paddingLeft="60dp"
+                    android:paddingRight="60dp"
+                    android:layout_weight="1"
+                    app:layout_constraintTop_toBottomOf="@+id/ivQrCodeValidate"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+        </LinearLayout>
 
     </ScrollView>
 
